Added Socail Media

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 1250px)" href="css/resp.css">
     <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/resp1.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- include
     //-   style css/style.css
     //-   style css/resp.css
@@ -36,7 +37,7 @@
             <div class="lines"></div>
         </div>
     </nav>
-    <section class="background" id="home">
+    <section class="background" id="home" >
         <div class="box-main">
             <div class="first">
                 <p class="text-big">The Future of Education is Here</p>
@@ -53,7 +54,7 @@
         </div>
 
     </section>
-    <section class="section">
+    <section class="section" style="margin-top: 5px;">
         <div class="sectag">
             <p class="tag text-big">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ducimus.</p>
             <p class="subTag text-small">
@@ -72,10 +73,10 @@
         </div>
 
         <div class="thumbnail">
-            <img src="https://source.unsplash.com/900x900/?books,laptop" alt="Laptop" class="imgFluid">
+            <img src="./img/img-1.jpg" alt="Laptop" class="imgFluid">
         </div>
     </section>
-    <section class="section sec-left">
+    <section class="section sec-left" style="margin-top: 5px;">
         <div class="sectag">
             <p class="tag text-big">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ducimus.</p>
             <p class="subTag text-small">
@@ -94,11 +95,11 @@
         </div>
 
         <div class="thumbnail">
-            <img src="https://source.unsplash.com/900x900/?laptop,laptop" alt="Laptop" class="imgFluid">
+            <img src="./img/img-2.jpg" alt="Laptop" class="imgFluid">
         </div>
     </section>
 
-    <section class="section">
+    <section class="section" style="margin-top: 5px;">
         <div class="sectag">
             <p class="tag text-big">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ducimus.</p>
             <p class="subTag text-small">
@@ -117,7 +118,7 @@
         </div>
 
         <div class="thumbnail">
-            <img src="https://source.unsplash.com/900x900/?study,laptop" alt="Laptop" class="imgFluid">
+            <img src="./img/img-3.jpg" alt="Laptop" class="imgFluid">
         </div>
     </section>
     <section class="contact" id="contact">
@@ -135,6 +136,16 @@
             
 
         </form>
+    </section>
+    <section class="social" >
+        <h2>Follow Us on:</h2>
+        <div>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/home" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i></a>
+        </div>
+        
     </section>
     <footer>
         <p class="footer">
